# gestiones-sos

./: .gitignore  README.md  gestiones.db  main.py  migrar.py  pyproject.toml
sql/: create.sql
src/: commons.py  config.py  state.py
src/components/: __init__.py  dialog_gestion.py  dialog_gestiones_masivas.py  dialog_pago.py  documentos_gestion.py  estado_select.py  navbar.py  tipo_select.py
src/db/: connection.py  database.py
src/pages/: __init__.py  clientes.py  gestiones.py  pagos.py  periodos.py  reportes.py
